fixed bug of chrome icon being too big

--- a/client/admin.css
+++ b/client/admin.css
@@ -10,7 +10,7 @@
   margin-top:13%;
   margin-bottom:0;
   height:auto;
-  max-width:600px;
+  max-width:60%;
   box-shadow: 0px 5px 10px #222222;
   padding-bottom:0;
   padding-top:0;
