--- a/client/checkout.css
+++ b/client/checkout.css
@@ -20,6 +20,7 @@ margin-bottom: 25%;
 
 .titleword {
   text-align: center;
+  margin-top: 0;
 }
 
 .row {
